--- a/Lab_ex_1_1.ipynb
+++ b/Lab_ex_1_1.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -97,45 +97,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[1.36691163e+01, 1.16081894e+01, 1.37120847e+01, 1.91991025e+01,\n",
-       "        1.90059722e+01, 1.23887328e+01, 7.02569513e+00, 5.40141882e+00,\n",
-       "        5.58483169e+00, 9.28200851e+00],\n",
-       "       [1.19472693e+01, 1.09313841e+01, 9.67121058e+00, 1.26998757e+01,\n",
-       "        9.17013841e+00, 1.19564895e+01, 4.89097648e-04, 1.15094487e+01,\n",
-       "        8.93705633e-01, 1.13762110e+01],\n",
-       "       [3.09757314e-01, 4.94931732e+00, 1.02461709e+01, 3.40997642e+00,\n",
-       "        3.59472747e-01, 3.48346780e+00, 1.42075364e+01, 3.97518079e+00,\n",
-       "        1.77159990e+01, 6.57241568e+00],\n",
-       "       [1.98746799e+01, 1.17357972e+00, 2.24796716e+00, 3.60969462e+00,\n",
-       "        1.48534526e+01, 1.11338900e+01, 1.26198122e+01, 6.48757051e+00,\n",
-       "        1.43298623e+01, 4.02227966e+00],\n",
-       "       [1.35291557e+01, 1.89600300e+01, 1.58467061e+01, 8.16671297e+00,\n",
-       "        1.38836915e+01, 6.68432791e+00, 3.18352768e-01, 2.94693449e+00,\n",
-       "        1.35167916e+01, 1.73976897e+01],\n",
-       "       [8.03193091e+00, 1.89156120e+01, 4.99902406e+00, 8.29842267e+00,\n",
-       "        9.97384391e-01, 8.09540279e+00, 8.53533472e+00, 5.66961265e+00,\n",
-       "        1.40854353e+00, 6.06308756e+00],\n",
-       "       [6.11293774e+00, 1.04899022e+01, 1.11043854e+01, 1.23170039e+01,\n",
-       "        2.24833232e+00, 9.55727488e+00, 1.61305382e+00, 9.07987453e+00,\n",
-       "        1.65755760e+01, 1.56162431e+01],\n",
-       "       [2.82618836e+00, 9.28877369e+00, 1.29193388e+01, 9.65129847e+00,\n",
-       "        1.27401276e+01, 7.46763080e+00, 1.85298135e+01, 1.47006857e+01,\n",
-       "        8.60139608e+00, 1.67001977e+01],\n",
-       "       [4.47420519e+00, 1.10607011e+01, 1.06767500e+01, 1.06768533e+01,\n",
-       "        4.93219459e+00, 1.63763709e+01, 1.04987060e+01, 5.30509905e+00,\n",
-       "        3.53962239e-02, 9.60318509e+00],\n",
-       "       [1.97565990e+01, 1.44158548e+01, 2.78107776e+00, 1.45603724e+01,\n",
-       "        1.24666923e+01, 5.52154654e+00, 1.08500604e+01, 1.44921006e+01,\n",
-       "        1.58734558e+00, 1.34703601e+01]])"
+       "array([[11.82244601, 17.29580743,  6.310178  ,  3.04833597, 19.67981526,\n",
+       "         5.77873797,  7.54533166, 18.91528043, 13.95835004,  8.33438284],\n",
+       "       [ 7.71846808, 11.65086193, 16.4264218 , 17.79226428, 14.39046291,\n",
+       "        11.53404738, 14.85881421,  6.98583908,  3.81237622,  0.68358304],\n",
+       "       [10.2129103 , 14.90322146,  2.80171231, 15.09107053,  8.40454978,\n",
+       "        14.11273737, 19.42634668, 12.54241447, 11.80862439,  2.10351806],\n",
+       "       [ 3.5905433 ,  8.82570249,  5.33684034, 13.47710832, 10.07707465,\n",
+       "         9.2120336 , 18.291416  , 18.74657866, 15.99091977, 13.18615117],\n",
+       "       [ 1.01033218,  0.05346569,  5.99199948, 19.73123166, 19.46379847,\n",
+       "         9.4956683 ,  6.85497365, 16.95044122,  8.93152435, 12.58749754],\n",
+       "       [ 3.23319414,  3.02496056, 17.70820368, 17.58341123,  5.15973813,\n",
+       "         5.05130804,  1.13710947, 18.10690756,  9.58257616, 12.09222197],\n",
+       "       [11.03563503, 11.34461008, 16.03341313, 11.95514682,  7.20301952,\n",
+       "         2.29869726, 15.00710134, 19.51049578, 10.8754814 , 17.59927819],\n",
+       "       [15.85779853, 10.06837502, 17.06008535, 10.83240149,  7.52153538,\n",
+       "         5.9003806 ,  6.4283255 , 14.68370957,  4.82292974, 15.80728639],\n",
+       "       [12.23622342, 11.48197245,  3.71274022, 17.53138901,  5.17680015,\n",
+       "         7.27574961,  7.09774628, 16.04859621, 11.11570367,  0.90913542],\n",
+       "       [15.59499782, 18.51202723, 18.85591569, 10.39926337,  5.05115334,\n",
+       "        14.93059171, 12.77057033, 15.49649169, 17.43477098, 15.58391459]])"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -149,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,35 +152,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ True,  True,  True,  True,  True,  True, False, False, False,\n",
+       "array([[ True,  True, False, False,  True, False, False,  True,  True,\n",
        "        False],\n",
-       "       [ True,  True, False,  True, False,  True, False,  True, False,\n",
+       "       [False,  True,  True,  True,  True,  True,  True, False, False,\n",
+       "        False],\n",
+       "       [ True,  True, False,  True, False,  True,  True,  True,  True,\n",
+       "        False],\n",
+       "       [False, False, False,  True,  True, False,  True,  True,  True,\n",
        "         True],\n",
-       "       [False, False,  True, False, False, False,  True, False,  True,\n",
-       "        False],\n",
-       "       [ True, False, False, False,  True,  True,  True, False,  True,\n",
-       "        False],\n",
-       "       [ True,  True,  True, False,  True, False, False, False,  True,\n",
+       "       [False, False, False,  True,  True, False, False,  True, False,\n",
        "         True],\n",
-       "       [False,  True, False, False, False, False, False, False, False,\n",
-       "        False],\n",
-       "       [False,  True,  True,  True, False, False, False, False,  True,\n",
+       "       [False, False,  True,  True, False, False, False,  True, False,\n",
        "         True],\n",
-       "       [False, False,  True, False,  True, False,  True,  True, False,\n",
+       "       [ True,  True,  True,  True, False, False,  True,  True,  True,\n",
        "         True],\n",
-       "       [False,  True,  True,  True, False,  True,  True, False, False,\n",
+       "       [ True,  True,  True,  True, False, False, False,  True, False,\n",
+       "         True],\n",
+       "       [ True,  True, False,  True, False, False, False,  True,  True,\n",
        "        False],\n",
-       "       [ True,  True, False,  True,  True, False,  True,  True, False,\n",
+       "       [ True,  True,  True,  True, False,  True,  True,  True,  True,\n",
        "         True]])"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -249,16 +239,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1, 2, 3]\n",
-      "[4, 5, 6]\n",
-      "[7, 8, 9]\n"
+      "[1, 2, 3, 4]\n",
+      "[5, 6, 7, 8]\n",
+      "[9]\n"
      ]
     }
    ],
@@ -311,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,6 +315,32 @@
    "source": [
     "* HINT: use list pf *python* [dictionaries](https://docs.python.org/3/tutorial/datastructures.html#dictionaries) to store the character counts in the map\n",
     "* HINT 2: merge the dicts in reduce"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{' ': 176, 'B': 2, 'y': 13, 'r': 38, 'o': 52, 'n': 49, 'S': 5, 'p': 10, 'e': 89, 'c': 25, ',': 11, 'h': 39, 'a': 72, 'd': 36, 'i': 49, 'g': 19, 'u': 17, 't': 72, 'w': 13, 'b': 16, 's': 59, 'L': 1, 'A': 1, 'l': 28, 'C': 3, 'H': 2, '“': 6, 'f': 12, '”': 6, '.': 10, 'v': 9, 'k': 5, 'm': 18, 'I': 8, '’': 8, '5': 2, '—': 3, 'P': 2, 'T': 3, 'D': 2, 'z': 1, 'x': 1, 'F': 1, 'O': 1, 'W': 2, '?': 1}\n"
+     ]
+    }
+   ],
+   "source": [
+    "def countChars(string):\n",
+    "    chars = functools.reduce(reducer ,map(lambda char: dict([[char,1]]), string))\n",
+    "    print(chars)\n",
+    "    \n",
+    "def reducer(i,j):\n",
+    "    for k in j:\n",
+    "        i[k] = i.get(k, 0) + j.get(k,0)\n",
+    "    return i\n",
+    "\n",
+    "countChars(text)"
    ]
   },
   {
@@ -351,7 +367,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
